--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -11,6 +11,9 @@
 .navbar {
   margin-bottom: 10px; }
 
+.task__item {
+  cursor: all-scroll; }
+
 #bodyBg {
   background-color: #28a74547; }
 
@@ -37,6 +40,9 @@
   max-width: 400px;
   position: relative; }
 
+.greeting {
+  margin-bottom: 0; }
+
 .login-card {
   padding: 30px 0; }
 
@@ -62,6 +68,10 @@
 
 .text-reset {
   text-decoration: underline; }
+
+.validation-help {
+  color: #9ba89b;
+  font-size: 13px; }
 
 .avatar-block {
   border-right: 1px solid rgba(129, 112, 112, 0.8); }
@@ -103,5 +113,14 @@ label[for="flag"] {
     border-color: #293747; }
   .darkTheme .modal-title {
     color: #272525; }
+
+.hide {
+  display: none !important; }
+
+.hovered {
+  background-color: #d1d8e2; }
+
+.task-list {
+  min-height: 50px; }
 
 /*# sourceMappingURL=main.css.map */
