--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -40,8 +40,21 @@
   max-width: 400px;
   position: relative; }
 
-.greeting {
+.greeting-block {
+  display: flex;
+  align-items: baseline; }
+
+.log-out-block {
+  margin-bottom: 20px; }
+
+.hello {
   margin-bottom: 0; }
+
+.greeting {
+  line-height: 1;
+  font-size: 2rem;
+  font-weight: 500;
+  margin-left: 10px; }
 
 .login-card {
   padding: 30px 0; }
@@ -54,6 +67,9 @@
 
 .title {
   margin-left: 15px; }
+
+.task__title {
+  display: inline-block; }
 
 .plus {
   width: 30px; }
